--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="../../Downloads/moban2376/assets/ico/favicon.ico">
+<link rel="shortcut icon" href="assets/ico/favicon.ico">
 
 <title>Home</title>
 
 <!-- Bootstrap core CSS -->
-<link href="../../Downloads/moban2376/assets/css/bootstrap.css" rel="stylesheet">
+<link href="assets/css/bootstrap.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href="../../Downloads/moban2376/assets/css/style.css" rel="stylesheet">
-<link href="../../Downloads/moban2376/assets/css/font-awesome.min.css" rel="stylesheet">
-<link href="../../Downloads/moban2376/assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+<link href="assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
 
 <!-- Just for debugging purposes. Don't actually copy this line! -->
 <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -33,7 +33,7 @@
 <!-- Menu -->
 <nav class="menu" id="theMenu">
 	<div class="menu-wrap">
-		<h1 class="logo"><a href="../../Downloads/moban2376/index.html#home">DSGN NYC</a></h1>
+		<h1 class="logo"><a href="index.html#home">DSGN NYC</a></h1>
 		<i class="fa fa-times menu-close"></i>
 		<a href="#home" class="smoothScroll">Home</a>
 		<a href="#about" class="smoothScroll">About</a>
@@ -66,7 +66,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 name">
-				<img class="img-responsive" src="../../Downloads/moban2376/assets/img/pic.png">
+				<img class="img-responsive" src="assets/img/pic.png">
 				<p>DANIEL PRATT</p>
 				<div class="name-label"></div>
 			</div><! --/col-lg-4-->
@@ -103,7 +103,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port04.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port04.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port04.jpg"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -116,7 +116,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port05.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port05.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port05.jpg"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -129,7 +129,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port06.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port06.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port06.jpg"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -144,7 +144,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port01.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port01.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port01.jpg"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -157,7 +157,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port02.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port02.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port02.jpg"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -170,7 +170,7 @@
 					<div class="project">
 						<div class="photo-wrapper">
 							<div class="photo">
-								<a class="fancybox" href="../../Downloads/moban2376/assets/img/portfolio/port03.jpg"><img class="img-responsive" src="../../Downloads/moban2376/assets/img/portfolio/port03.jpg" alt=""></a>
+								<a class="fancybox" href="assets/img/portfolio/port03.jpg"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt=""></a>
 							</div>
 							<div class="overlay"></div>
 						</div>
@@ -269,19 +269,19 @@
 					<div class="item active mb centered">
 					  <h3>MARK WEBBER</h3>
 					  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					  <p><img class="img-circle" src="../../Downloads/moban2376/assets/img/pic-t1.jpg" width="80"></p>
+					  <p><img class="img-circle" src="assets/img/pic-t1.jpg" width="80"></p>
 					</div>
 
 					<div class="item mb centered">
 					  <h3>PAUL LEVINGSTON</h3>
 					  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					  <p><img class="img-circle" src="../../Downloads/moban2376/assets/img/pic-t2.jpg" width="80"></p>
+					  <p><img class="img-circle" src="assets/img/pic-t2.jpg" width="80"></p>
 					</div>
 
 					<div class="item mb centered">
 					  <h3>LUCY LENNIN</h3>
 					  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-					  <p><img class="img-circle" src="../../Downloads/moban2376/assets/img/pic-t3.jpg" width="80"></p>
+					  <p><img class="img-circle" src="assets/img/pic-t3.jpg" width="80"></p>
 					</div>
 
 				  </div>
@@ -344,14 +344,14 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
- <script src="../../Downloads/moban2376/assets/js/jquery.min.js"></script>
+ <script src="assets/js/jquery.min.js"></script>
 </body>
-<script src="../../Downloads/moban2376/assets/js/classie.js"></script>
-<script src="../../Downloads/moban2376/assets/js/bootstrap.min.js"></script>
-<script src="../../Downloads/moban2376/assets/js/smoothscroll.js"></script>
-<script src="../../Downloads/moban2376/assets/js/jquery.stellar.min.js"></script>
-<script src="../../Downloads/moban2376/assets/js/fancybox/jquery.fancybox.js"></script>    
-<script src="../../Downloads/moban2376/assets/js/main.js"></script>
+<script src="assets/js/classie.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/smoothscroll.js"></script>
+<script src="assets/js/jquery.stellar.min.js"></script>
+<script src="assets/js/fancybox/jquery.fancybox.js"></script>    
+<script src="assets/js/main.js"></script>
 	<script>
 	$(function(){
 		$.stellar({
