--- a/index.html
+++ b/index.html
@@ -53,11 +53,6 @@
 <section id="home" name="home"></section>
 <div id="headerwrap">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<h1>EUYNAT</h1>
-			</div>
-		</div><! --/row -->
 	</div><! --/container -->
 </div><! --/headerwrap -->
 
@@ -319,7 +314,7 @@
 					Mail. Hello@coolfolks.com<br/>
 					Skype. NYCDesign
 				</p>
-				<p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+				<p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank"&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
 		
 			</div>
 			
