--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta name="viewport" content="width=device-width,inital-scale=1,maximum-scale=1,user-scalable=no;" /> 
 <title>谭悦 | UI DESIGNER</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body bgcolor="#000000#010101">
 <!-- Save for Web Slices (euynat谭悦书法字体.psd) -->
-<img id="euynatx8c2dx60a6x4e66x6cd5x5b57x4f53" src="images/euynat&#x8c2d;&#x60a6;&#x4e66;&#x6cd5;&#x5b57;&#x4f53;.gif" width="1920" height="1080" alt="" />
+<img id="euynatx8c2dx60a6x4e66x6cd5x5b57x4f53" src="../../Desktop/个人网站建设/images/euynat谭悦书法字体.gif" width="1920" height="1080" alt="" />
 <!-- End Save for Web Slices -->
 </body>
 </html>
